--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-FPAW3M.swf filter=lfs diff=lfs merge=lfs -text
-FPAW3SuperShell.swf filter=lfs diff=lfs merge=lfs -text
+FPAW3M.swf filter=lfs diff=lfs merge=lfs -text Content-Type: application/x-shockwave-flash
+FPAW3SuperShell.swf filter=lfs diff=lfs merge=lfs -text Content-Type: application/x-shockwave-flash
+/W3/*.swf filter=lfs diff=lfs merge=lfs -text Content-Type: application/x-shockwave-flash
